# freedomProject

backend/main-api/libs/common/src/decorators/: index.ts
backend/main-api/src/: app.module.ts  main.ts
backend/main-api/src/auth/: auth.controller.ts  auth.service.ts  interfaces.ts
backend/main-api/src/auth/guards/: index.ts
backend/main-api/src/auth/strategies/: jwt.strategy.ts
backend/main-api/src/news/: news.controller.ts
backend/main-api/src/user/: user.controller.ts  user.service.ts
backend/main-api/src/user/responses/: user.response.ts
flauncher/src-tauri/: Cargo.toml  tauri.conf.json
flauncher/src-tauri/src/: commands.rs  main.rs
flauncher/src-tauri/src/services/: minecraft.rs
flauncher/src/components/Home/LaunchButton/: LaunchButton.tsx  style.module.css
flauncher/src/components/Home/NewsComponent/: NewsBlock.tsx
flauncher/src/components/Profile/MainInfo/MainProfileComponent/: MainProfile.tsx
flauncher/src/components/Profile/MainInfo/SecurityComponent/: SecurityComponent.tsx
flauncher/src/configs/: api.config.ts
freedomBot/: config.py  keyboards.py  main.py
freedomBot/handlers/: start.py  support.py
plugins/FDP_Items/: dependency-reduced-pom.xml  pom.xml
plugins/FDP_Playerlimiter/: dependency-reduced-pom.xml  pom.xml
plugins/FDP_Playerlimiter/src/main/resources/: config.yml  plugin.yml
plugins/FDP_TimeVote/: dependency-reduced-pom.xml  pom.xml
plugins/FDP_TimeVote/src/main/resources/: plugin.yml
plugins/FDP_apiCheck/: dependency-reduced-pom.xml  pom.xml
plugins/FDP_apiCheck/src/main/resources/: plugin.yml
(+17 files in other folders)
