[package]
name = "flauncher"
version = "0.2.4"
description = "A Tauri App"
authors = ["foksik"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tokio = { version = "1", features = ["process", "sync", "rt-multi-thread"] }
tauri = { version = "1", features = [ "fs-all", "shell-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
